0113 검수용 업로드

--- a/work/IGP_001.html
+++ b/work/IGP_001.html
@@ -101,7 +101,7 @@
                         <img src="./../images/biz2/img/img_graph.png" alt="평생교육이용권 1인당 연간  35만원 (우수이용자 70만원) 지원 그래프">
                         <div class="ticket-desc">
                             <dl class="list01">
-                                <dt>이용권 구분</dt>
+                                <dt>이용권 유형</dt>
                                 <dd>지역특화 (저소득층) 이용권</dd>
                                 <dd>디지털 이용권</dd>
                                 <dd>노인 이용권</dd>
