--- a/work/IIP_150.html
+++ b/work/IIP_150.html
@@ -173,7 +173,7 @@
                                 </dd>                
                             </dl>
                             <dl>
-                                <dt><label for="srch06">평생교육이용권 구분</label></dt>
+                                <dt><label for="srch06">평생교육이용권 유형</label></dt>
                                 <dd class="flex-ac">
                                     <select id="srch06" class="w-100">
                                         <option value="none">전체</option>
@@ -239,14 +239,15 @@
                     <table>
                         <caption>사용기관 교육과정 정보 테이블</caption>
                         <colgroup>                       
-                            <col style="width:92px;">
-                            <col style="width:160px;">
-                            <col style="width:356px;">
-                            <col style="width:100px;">                                
-                            <col style="width:100px;">
-                            <col style="width:160px;">
-                            <col style="width:160px;">
-
+                            <col style="width: 8%;">
+                            <col style="width: 7%;">
+                            <col style="width: 20%;">
+                            <col style="width: 7%;">                                
+                            <col style="width: 8%;">
+                            <col style="width: 7%;">
+                            <col style="width: 10%">
+                            <col style="width: 8%">
+                            <col style="width: 7%">
                         </colgroup>
                         <thead>
                             <tr>
@@ -255,6 +256,7 @@
                                 <th>교육기간</th>
                                 <th>정원</th>
                                 <th>이수인원</th>
+                                <th>분반</th>
                                 <th>결과 증빙자료<br>(출석부 등 )</th>
                                 <th>7대 영역</th>
                                 <th>이수현황</th>
@@ -267,6 +269,7 @@
                                 <td>YYYY-MM-DD ~ YYYY-MM-DD</td>
                                 <td>00</td>
                                 <td>00</td>
+                                <td>1</td>
                                 <td>OOOOOO.Doc</td>
                                 <td>
                                     <div class="tooltip">
@@ -290,6 +293,7 @@
                                 <td>YYYY-MM-DD ~ YYYY-MM-DD</td>
                                 <td>00</td>
                                 <td>00</td>
+                                <td>2</td>
                                 <td>OOOOOO.Doc</td>
                                 <td>
                                     <div class="tooltip">
@@ -308,7 +312,7 @@
                                 <td>교육완료</td>
                             </tr>
                             <tr>
-                                <td colspan="8">교육 과정이 없습니다.</td>
+                                <td colspan="9">교육 과정이 없습니다.</td>
                             </tr>
                         </tbody>
                     </table>
