--- a/work/IIP_151.html
+++ b/work/IIP_151.html
@@ -147,8 +147,8 @@
                         <tr>
                             <th class="txt-l">온/오프<br>(교육방법)</th>
                             <td>온/오프 혼합</td>
-                            <th class="txt-l">과정 구분</th>
-                            <td>디지털</td>
+                            <th class="txt-l">분반</th>
+                            <td>2</td>
                         </tr>
                         <tr>
                             <th class="txt-l">이수인원</th>
