--- a/work/IIP_152.html
+++ b/work/IIP_152.html
@@ -255,7 +255,7 @@
                             <th>성명</th>
                             <th>생년월일</th>
                             <th>금액</th>
-                            <th>이용권 구분</th>
+                            <th>이용권 유형</th>
                             <th>이수구분</th>
                             <th>삭제</th>
                         </tr>
