--- a/work/IIP_201.html
+++ b/work/IIP_201.html
@@ -225,7 +225,7 @@
                     <thead>
                         <tr>
                             <th>순번</th>
-                            <th>이용권구분</th>
+                            <th>이용권 유형</th>
                             <th>학습자명</th>
                             <th>생년월일</th>
                             <th>출석일수/시간/차수</th>
