--- a/work/IIP_301.html
+++ b/work/IIP_301.html
@@ -138,7 +138,7 @@
                             <th rowspan="2">강좌기간</th>
                             <th rowspan="2">출석일수/<br>시간/회차</th>
                             <th rowspan="2">이수여부</th>
-                            <th rowspan="2">이용권구분</th>
+                            <th rowspan="2">이용권 유형</th>
                             <th scope="row" colspan="3">사용자정보</th>
                         </tr>
                         <tr>
