--- a/work/ILP_001.html
+++ b/work/ILP_001.html
@@ -85,7 +85,7 @@
             <p class="page-header-desc">평생교육이용권 이용을 위한 사용기관 신청 화면입니다.</p>
         </div>
 
-        <ul class="steps flex-ac">
+        <ul class="steps flex-acjc">
             <li class="active">
                 <span class="step01">1단계</span>
                 <strong>약관동의</strong>
