--- a/work/LAP_300.html
+++ b/work/LAP_300.html
@@ -248,7 +248,7 @@
                         <tr>
                             <th>선정일자</th>
                             <th>지역</th>
-                            <th>이용권 구분</th>
+                            <th>이용권 유형</th>
                             <th>차수</th>
                             <th>성명</th>
                             <th>생년월일</th>
@@ -275,7 +275,7 @@
                     <li>
                         <p><strong class="list-label">선정일자</strong><span>2025-01-01</span></p>
                         <p><strong class="list-label">지역</strong><span>국가이용권</span></p>
-                        <p><strong class="list-label">이용권 구분</strong><span>지역특화</span></p>
+                        <p><strong class="list-label">이용권 유형</strong><span>지역특화</span></p>
                         <p><strong class="list-label">차수</strong><span>1</span></p>
                         <p><strong class="list-label">성명</strong><span>홍길동</span></p>
                         <p><strong class="list-label">생년월일</strong><span>1998-03-02</span></p>
