--- a/work/IIP_100.html
+++ b/work/IIP_100.html
@@ -119,7 +119,7 @@
                                 </dd>                    
                             </dl>
                             <dl>
-                                <dt><label for="srch02">평생교육이용권 구분</label></dt>
+                                <dt><label for="srch02">평생교육이용권 유형</label></dt>
                                 <dd>
                                     <select name="" id="srch02">
                                         <option value="">전체</option>
@@ -129,7 +129,7 @@
                             <dl class="period">
                                 <dt><label for="srch03">승인기간</label></dt>                            
                                 <dd>
-                                    <input type="date" id="srch03" class="date"> <span class="dash">~</span> <input type="date" class="date">
+                                    <input type="date" id="srch03" class="date" placeholder="확인차"> <span class="dash">~</span> <input type="date" class="date">
                                     <span class="btn-wrap">
                                         <button type="button" class="btn-bd">2024</button>
                                         <button type="button" class="btn-bd">2023</button>
@@ -214,7 +214,7 @@
                             <th>승인일시</th>
                             <th>승인번호</th>
                             <th>승인금액</th>
-                            <th>이용권구분</th>
+                            <th>이용권 유형</th>
                             <th>이용자명</th>
                             <th>부분취소 금액</th>
                             <th>매핑</th>
