--- a/work/IIP_153.html
+++ b/work/IIP_153.html
@@ -148,13 +148,13 @@
                         </tr>
                         <tr>
                             <th class="txt-l"><label for="srch04">온/오프<br>(교육방법)</label></th>
-                            <td class="border-right-init" colspan="3">
-                                <input type="text" id="srch04" class="readonly-txt" value="온라인" readonly />
-                            </td>
+                            <td><input type="text" id="srch04" class="readonly-txt" value="온라인" readonly /></td>
+                            <th class="txt-l"><label for="srch-aa">분반</label></th>
+                            <td><input type="text" id="srch-aa" value="2" readonly></td>
                         </tr>
                         <tr>
                             <th class="txt-l must-type"><label for="srch06">이수인원</label></th>
-                            <td><input type="text" id="srch06"></td>
+                            <td><input type="text" id="srch06" value="13" readonly ></td>
                             <th class="txt-l"><label for="srch05">정원</label></th>
                             <td><input type="text" id="srch05" class="readonly-txt" value="46" readonly /></td>
                         </tr>
@@ -256,7 +256,7 @@
                             <th>성명</th>
                             <th>생년월일</th>
                             <th>금액</th>
-                            <th>이용권 구분</th>
+                            <th>이용권 유형</th>
                             <th>이수구분</th>
                             <th>삭제</th>
                         </tr>
@@ -399,16 +399,6 @@
                             </dt>
                             <dd>
                                 <input type="date" placeholder="이용권 선정(날짜)">
-                            </dd>
-                        </dl>
-                        <dl class="search-view">
-                            <dt>
-                                <label for="">이수현황</label>
-                            </dt>
-                            <dd>
-                                <select class="ui-select">
-                                    <option value="1">선택</option>
-                                </select> 
                             </dd>
                         </dl>
                         <div class="search-btn-group">
