--- a/work/IIP_401.html
+++ b/work/IIP_401.html
@@ -257,34 +257,41 @@
                         <tr>
                             <th class="txt-l">기관 운영강좌 유형</th>
                             <td colspan="5" class="type-wrap">
-                                <div class="row-gap">
+                                <div class="chk-write row-gap">
                                     <div class="chk-box">
                                         <input type="checkbox" id="chk-15">
                                         <label for="chk-15">학력보완교육</label>
+                                        <input type="text">
                                     </div>
                                     <div class="chk-box">
                                         <input type="checkbox" id="chk-16">
                                         <label for="chk-16">성인 문해교육</label>
+                                        <input type="text">
                                     </div>
                                     <div class="chk-box">
                                         <input type="checkbox" id="chk-17">
                                         <label for="chk-17">직업능력 향상교육</label>
+                                        <input type="text">
                                     </div>
                                     <div class="chk-box">
                                         <input type="checkbox" id="chk-18">
                                         <label for="chk-18">성인 진로개발역량 향상교육</label>
+                                        <input type="text">
                                     </div>
                                     <div class="chk-box">
                                         <input type="checkbox" id="chk-19">
                                         <label for="chk-19">인문교양교육</label>
+                                        <input type="text">
                                     </div>
                                     <div class="chk-box">
                                         <input type="checkbox" id="chk-20">
                                         <label for="chk-20">문화예술교육</label>
+                                        <input type="text">
                                     </div>
                                     <div class="chk-box">
                                         <input type="checkbox" id="chk-21">
                                         <label for="chk-21">시민참여교육</label>
+                                        <input type="text">
                                     </div>
                                 </div>
                             </td>
