--- a/work/ILP_003.html
+++ b/work/ILP_003.html
@@ -417,36 +417,43 @@
                         </td>
                     </tr>
                     <tr>
-                        <th class="txt-l must-type">운영 강좌 유형</th>
+                        <th class="txt-l must-type">기관 운영강좌 유형</th>
                         <td class="type-wrap">
-                            <div class="row-gap">
+                            <div class="chk-write row-gap">
                                 <div class="chk-box">
                                     <input type="checkbox" id="chk-15">
                                     <label for="chk-15">학력보완교육</label>
+                                    <input type="text">
                                 </div>
                                 <div class="chk-box">
                                     <input type="checkbox" id="chk-16">
                                     <label for="chk-16">성인 문해교육</label>
+                                    <input type="text">
                                 </div>
                                 <div class="chk-box">
                                     <input type="checkbox" id="chk-17">
                                     <label for="chk-17">직업능력 향상교육</label>
+                                    <input type="text">
                                 </div>
                                 <div class="chk-box">
                                     <input type="checkbox" id="chk-18">
                                     <label for="chk-18">성인 진로개발역량 향상교육</label>
+                                    <input type="text">
                                 </div>
                                 <div class="chk-box">
                                     <input type="checkbox" id="chk-19">
                                     <label for="chk-19">인문교양교육</label>
+                                    <input type="text">
                                 </div>
                                 <div class="chk-box">
                                     <input type="checkbox" id="chk-21">
                                     <label for="chk-21">문화예술교육</label>
+                                    <input type="text">
                                 </div>
                                 <div class="chk-box">
                                     <input type="checkbox" id="chk-22">
                                     <label for="chk-22">시민참여교육</label>
+                                    <input type="text">
                                 </div>
                                 <p class="bullet">기관이 운영 중인 강좌 유형을 선택하고 빈칸에 강좌 종류를 간략히 적어주십시오.</p>
                             </div>
