--- a/work/LAP_001.html
+++ b/work/LAP_001.html
@@ -202,7 +202,7 @@
                 <tbody>
                     <tr>
                         <th class="txt-l">
-                            <label for="a">신청자 이름</label>
+                            <label for="a">신청자 성명</label>
                         </th>
                         <td>
                             <input type="text" id="a" class="fixed-value">
