--- a/work/LAP_003.html
+++ b/work/LAP_003.html
@@ -192,7 +192,7 @@
                 </colgroup>
                 <tbody>
                     <tr>
-                        <th class="txt-l must-type">
+                        <th class="txt-l">
                             <label for="a">성명</label>
                         </th>
                         <td>
@@ -200,7 +200,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th class="txt-l must-type">
+                        <th class="txt-l">
                             <label for="b">주민등록번호</label>
                         </th>
                         <td>
@@ -212,7 +212,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th class="txt-l must-type">
+                        <th class="txt-l">
                             <label for="d">대상 유형</label>
                         </th>
                         <td>
@@ -224,7 +224,7 @@
                         <td class="input-group space">
                             <div class="flex-ac">
                                 <div class="input-num">
-                                    <select id="tel">
+                                    <select id2="tel">
                                         <option value="none">선택</option>
                                         <option value="1">2</option>
                                         <option value="1">3</option>
