--- a/work/LGP_002.html
+++ b/work/LGP_002.html
@@ -177,7 +177,7 @@
                         <div class="lg-only">
                             <div class="ticket-desc">
                                 <dl class="list01">
-                                    <dt>이용권 구분</dt>
+                                    <dt>이용권 유형</dt>
                                     <dd>지역특화 (저소득층) 이용권</dd>
                                     <dd>디지털 이용권</dd>
                                     <dd>노인 이용권</dd>
