(검수용 파일 업로드)

--- a/work/IIP_400.html
+++ b/work/IIP_400.html
@@ -125,11 +125,11 @@
                             <td colspan="5" class="division">
                                 <div class="flex-ac">
                                     <span class="chk-box">
-                                        <input type="checkbox" id="chk-1">
+                                        <input type="checkbox" id="chk-1" disabled>
                                         <label for="chk-1">온라인 교육기관</label>
                                     </span>
                                     <span class="chk-box">
-                                        <input type="checkbox" id="chk-2">
+                                        <input type="checkbox" id="chk-2" disabled>
                                         <label for="chk-2">오프라인 교육기관</label>
                                     </span>
                                 </div>
@@ -141,7 +141,7 @@
                                 <div class="flex-ac">
                                     <small class="txt-s">(10101)</small>
                                     <div class="chk-box">
-                                        <input type="checkbox" id="chk-3">
+                                        <input type="checkbox" id="chk-3" disabled>
                                         <label for="chk-3">지도 서비스 제공</label>
                                     </div>
                                     <small class="txt-s">(오프라인 교육기관 체크시 선택 가능합니다.)</small>
@@ -180,31 +180,31 @@
                             <td colspan="5" class="type-wrap">
                                 <div class="flex-ac divide">
                                     <div class="chk-box">
-                                        <input type="checkbox" id="chk-5">
+                                        <input type="checkbox" id="chk-5" disabled>
                                         <label for="chk-5">장애인 화장실</label>
                                     </div>
                                     <div class="chk-box">
-                                        <input type="checkbox" id="chk-6">
+                                        <input type="checkbox" id="chk-6" disabled>
                                         <label for="chk-6">장애인용 엘리베이터</label>
                                     </div>
                                     <div class="chk-box">
-                                        <input type="checkbox" id="chk-7">
+                                        <input type="checkbox" id="chk-7" disabled>
                                         <label for="chk-7">장애인전용 주차구역</label>
                                     </div>
                                     <div class="chk-box">
-                                        <input type="checkbox" id="chk-8">
+                                        <input type="checkbox" id="chk-8" disabled>
                                         <label for="chk-8">주출입구 단차없음</label>
                                     </div>
                                     <div class="chk-box">
-                                        <input type="checkbox" id="chk-9">
+                                        <input type="checkbox" id="chk-9" disabled>
                                         <label for="chk-9">휠체어 대여</label>
                                     </div>
                                     <div class="chk-box">
-                                        <input type="checkbox" id="chk-10">
+                                        <input type="checkbox" id="chk-10" disabled>
                                         <label for="chk-10">시각장애인 편의서비스</label>
                                     </div>
                                     <div class="chk-box">
-                                        <input type="checkbox" id="chk-11">
+                                        <input type="checkbox" id="chk-11" disabled>
                                         <label for="chk-11">청각장애인 편의서비스</label>
                                     </div>
                                 </div>
@@ -215,15 +215,15 @@
                             <td colspan="5" class="type-wrap">
                                 <div class="row-gap">
                                     <div class="chk-box">
-                                        <input type="checkbox" id="chk-12">
+                                        <input type="checkbox" id="chk-12" disabled>
                                         <label for="chk-12" class="ico organ01">학점은행제 평가인정기관</label>
                                     </div>
                                     <div class="chk-box ico">
-                                        <input type="checkbox" id="chk-13">
+                                        <input type="checkbox" id="chk-13" disabled>
                                         <label for="chk-13" class="ico organ02">평생학습계좌제 평가인정기관</label>
                                     </div>
                                     <div class="chk-box ico">
-                                        <input type="checkbox" id="chk-14">
+                                        <input type="checkbox" id="chk-14" disabled>
                                         <label for="chk-14" class="ico organ03">성인문해교육 프로그램 운영기관</label>
                                     </div>
                                 </div>
@@ -234,27 +234,27 @@
                             <td colspan="5" class="type-wrap">
                                 <div class="row-gap">
                                     <div class="chk-box">
-                                        <input type="checkbox" id="chk-15">
+                                        <input type="checkbox" id="chk-15" disabled>
                                         <label for="chk-15">학력보완교육</label>
                                     </div>
                                     <div class="chk-box">
-                                        <input type="checkbox" id="chk-16">
+                                        <input type="checkbox" id="chk-16" disabled>
                                         <label for="chk-16">성인 문해교육</label>
                                     </div>
                                     <div class="chk-box">
-                                        <input type="checkbox" id="chk-17">
+                                        <input type="checkbox" id="chk-17" disabled>
                                         <label for="chk-17">직업능력 향상교육</label>
                                     </div>
                                     <div class="chk-box">
-                                        <input type="checkbox" id="chk-18">
+                                        <input type="checkbox" id="chk-18" disabled>
                                         <label for="chk-18">성인 진로개발역량 향상교육</label>
                                     </div>
                                     <div class="chk-box">
-                                        <input type="checkbox" id="chk-19">
+                                        <input type="checkbox" id="chk-19" disabled>
                                         <label for="chk-19">인문교양교육</label>
                                     </div>
                                     <div class="chk-box">
-                                        <input type="checkbox" id="chk-21">
+                                        <input type="checkbox" id="chk-21" disabled>
                                         <label for="chk-21">시민참여교육</label>
                                     </div>
                                 </div>
@@ -297,15 +297,15 @@
                             <td colspan="3" class="type-wrap">
                                 <div class="row-gap">
                                     <div class="chk-box">
-                                        <input type="checkbox" id="chk-15a">
+                                        <input type="checkbox" id="chk-15a" disabled>
                                         <label for="chk-15a">개인정보 처리 위탁 계약서</label>
                                     </div>
                                     <div class="chk-box">
-                                        <input type="checkbox" id="chk-16a">
+                                        <input type="checkbox" id="chk-16a" disabled>
                                         <label for="chk-16a">정보보안 서약서</label>
                                     </div>
                                     <div class="chk-box">
-                                        <input type="checkbox" id="chk-17a">
+                                        <input type="checkbox" id="chk-17a" disabled>
                                         <label for="chk-17a">사용기관 준수사항 동의</label>
                                     </div>
                                 </div>
