--- a/work/IIP_401.html
+++ b/work/IIP_401.html
@@ -78,7 +78,6 @@
             <div class="location-box">
                 <span class="arrow">사용기관</span>
                 <span class="arrow">기관 정보 수정</span>
-                <span class="arrow">기관 정보 수정 상세</span>
             </div>
         </div>
     </div>
@@ -383,7 +382,7 @@
                         </tr>
                         <tr>
                             <th class="txt-l">
-                                <label for="tel01" class="must-type">업무내선번호</label>
+                                <label for="tel01">업무내선번호</label>
                             </th>
                             <td colspan="3" class="input-group">
                                 <div class="flex-ac">
