--- a/work/LIP_100.html
+++ b/work/LIP_100.html
@@ -90,10 +90,10 @@
                 <div class="sm-menu-in">
                     <div class="sm-menu-header">
                         <!-- 로그인 전 -->
-                        <a href="#" class="txt-bold"><span class="ico user"></span>로그인</a>
+                        <a href="#" class="txt-bold">로그인</a>
                         <!-- 로그인 후 -->
                         <!-- <p class="sm-info-user">
-                            <span class="ico user"></span>
+                            
                             <span class="user-name txt-bold">김국바</span>님 환영합니다
                         </p> -->
                         <button class="sm-close ico">
